2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `dirent'.

	* rcsclean.c: #include <dirent.h> unconditionally.
	(get_directory): Define func unconditionally.
	(main): Call `get_directory' unconditionally.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <signal> provides SIG{HUP,INT,PIPE,QUIT,TERM,XCPU,XFSZ}.

	* rcsutil.c (regsigs): Remove #ifdef foo and #endif, for
	foo: SIGHUP, SIGINT, SIGPIPE, SIGQUIT, SIGTERM, SIGXCPU, SIGXFZ.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <signal.h> provides `SA_SIGINFO'.

	* rcsutil.c: Throughout, take `defined SA_SIGINFO' to be 1.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume `siginfo_t' has member `si_errno'.

	* rcsutil.c (catchsigaction): Take `defined HAVE_SI_ERRNO' to be 1.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use gnulib module `sig2str'; push `psignal' cppcond down.

	* rcsutil.c: #include "sig2str.h".
	(complain_signal): New static func.
	[!HAVE_PSIGNAL] (psignal): Delete #define.
	[!HAVE_PSIGNAL] (my_psignal): Delete func.
	(catchsigaction, runv): Use `complain_signal'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Also link against lib/libgnu.a.

	* Makefile.am (LDADD): Add options to link against ../lib/libgnu.a.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `double-slash-root'.

	* rcsfnms.c (DOUBLE_SLASH_IS_DISTINCT_ROOT): If not #define:d,
	#define to 0.
	(dir_useful_len): Use `DOUBLE_SLASH_IS_DISTINCT_ROOT'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move the config header (and template) from src/ to lib/.

	* base.h: Don't #include "auto-sussed.h";
	instead, #include "config.h".
	* Makefile.am (AM_CPPFLAGS): Delete var.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Remove now-obsolete support for !HAVE_SIGNAL_H.

	* base.h [!HAVE_SIGNAL_H] (catchints, ignoreints, restoreints):
	Delete macros, with surrounding cpp #if block.