@@ -1,5 +1,14 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Move #include <fcntl.h> to .c files.
+
+	* base.h: Don't #include <fcntl.h>.
+	* rcsedit.c [HAVE_FCNTL_H]: #include <fcntl.h>.
+	* rcslex.c: Likewise.
+	* rcsutil.c: Likewise.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Use gnulib module `dirent'.
 
 	* rcsclean.c: #include <dirent.h> unconditionally.
